# locomanipulation-4212-final-project

./: .gitignore  Dockerfile  README.md  generate_occupancy_grid_from_mesh.py  kitchen_path_gen_grid.py  pyproject.toml  setup_env.py
Perception_pipline/: percption_bash.sh
Perception_pipline/Florence-2-Vision-Language-Model/: demo.py  utility.py
Perception_pipline/GraspGen/: grasp_generator.py
assets/: apple.sdf  floor.sdf  refrigerator.sdf
assets/banana/: banana.sdf
assets/bowl/: bowl.sdf
assets/fork/: fork.sdf
assets/knife/: knife.sdf
assets/lemon/: lemon.sdf
assets/mug/: mug.sdf
assets/orange/: orange.sdf
assets/peach/: peach.sdf
assets/pear/: pear.sdf
assets/plate/: plate.sdf
assets/plum/: plum.sdf
assets/spoon/: spoon.sdf
assets/strawberry/: strawberry.sdf
assets/tomato_soup_can/: tomato_soup_can.sdf
data/: kitchen_occupancy_grid.npy  kitchen_occupancy_grid_metadata.npy
data/explore/: capture_0000.npy  capture_0001.npy  capture_0002.npy  capture_0003.npy  capture_0004.npy  capture_0005.npy  capture_0006.npy  capture_0007.npy  capture_0008.npy  capture_0009.npy
examples/: path_gen.py
kitchen_model/: custom_kitchen.sdf  kitchen.sdf  kitchen_scenario.yaml  real_kitchen_scenario.yaml
kitchen_model/meshes/: kitchen_env.gltf  kitchen_env.mtl
kitchen_model/meshes_new/: kitchen_env.gltf
kitchen_model/meshes_new/collision/: cabinet3.mtl  chairs.mtl  frig.mtl  table1.mtl  (+4 more)
notebooks/: iiwa_mobile_base.ipynb  install.txt  kitchen.ipynb  kitchen_path_gen.ipynb  load_kitchen_sdf.ipynb  path_gen.ipynb  pr2.ipynb  real_kitchen_path_planning.ipynb  visualize_captured_images.ipynb
