[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RoboticManipulation"
version = "0.1.0"
description = "Final project for MIT 6.4212 - Locomanipulation"
authors = [
  { name = "Feiyang Wu", email = "raventhatfly@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
  "drake>=1.33.0",     # pydrake comes from drake
  "numpy>=1.24",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "pandas>=2.1",
  "manipulation==2025.10.20"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "examples*", "notebooks*", "assets*", "build*", "dist*", "*.egg-info*"]
